Using Mapstruct for Mapping DTOs and Entities
Signed-off-by: Vishwas K Singh <vishwas@cloudthat.com>